fix: minimize perform and syntax

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
     <title>Marathondreamcup.vn – Chạy Gây Quỹ Từ Thiện Trên Cung Đường Kim Cương</title>
@@ -7,9 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>logoRDC.png">
+    <link rel="preload" as="image" href="../assets/images/logo_RDC2024.png">
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+
 
     <body>
         <noscript>
