[UPDATE]: compress image, add name class for h1 tag h2 tag

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Marathondreamcup.vn – Chạy Gây Quỹ Từ Thiện Trên Cung Đường Kim Cương</title>
+    <title>RunningDiamonCup.vn – Chạy Gây Quỹ Từ Thiện Trên Cung Đường Kim Cương</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>logoRDC.png">
+    <meta name="description" content="This is an example of a meta description. It will show up in search engine results as a summary of what the page is about.">
+    <meta name="robots" content="noindex, nofollow">
+    <meta property="og:title" content="Running Diamond Cup" />
+    <meta property="og:image" content="../assets/images/logo_RDC2024.png" />
+    <meta property="og:description" content="Running Diamond Cup" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="RDC" />
+    <meta property="twitter:image" content="../assets/images/logo_RDC2024.png" />
+    <meta property="twitter:description" content="Running Diamond Cup" />
     <link rel="preload" as="image" href="../assets/images/logo_RDC2024.png">
     <title>
         <%= htmlWebpackPlugin.options.title %>
