--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta property="twitter:image" content="../assets/images/logo_RDC2024.png" />
     <meta property="twitter:description" content="Running Diamond Cup" />
     <link rel="preload" as="image" href="../assets/images/logo_RDC2024.png">
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
