--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>RunningDiamonCup.vn – Chạy Gây Quỹ Từ Thiện Trên Cung Đường Kim Cương</title>
+    <title>RunningDiamondCup.vn – Chạy Gây Quỹ Từ Thiện Trên Cung Đường Kim Cương</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
