--- a/public/index.html
+++ b/public/index.html
@@ -1,93 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta
-    name="description"
-    content="This is an example of a meta description. It will show up in search engine results as a summary of what the page is about."
-  />
-  <meta name="robots" content="noindex, nofollow" />
-  <meta property="og:title" content="Running Diamond Cup" />
-  <meta property="og:image" content="../assets/images/logo_RDC2024.png" />
-  <meta property="og:description" content="Running Diamond Cup" />
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:title" content="RDC" />
-  <meta property="twitter:image" content="../assets/images/logo_RDC2024.png" />
-  <meta property="twitter:description" content="Running Diamond Cup" />
+<meta charset="utf-8" />
+<meta http-equiv="origin-trial" content="Az520Inasey3TAyqLyojQa8MnmCALSEU29yQFW8dePZ7xQTvSt73pHazLFTK5f7SyLUJSo2uKLesEtEa9aUYcgMAAACPeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZS5jb206NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OSwiaXNTdWJkb21haW4iOnRydWUsImlzVGhpcmRQYXJ0eSI6dHJ1ZX0=">
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<meta name="description" content="This is an example of a meta description. It will show up in search engine results as a summary of what the page is about." />
+<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+<meta name="title" content="Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương">
+<meta name="description" content="Running Diamond Cup 2024 sẽ có 02 cự ly, gồm 5km và 10km dành cho các vận động viên phong trào nam và nữ. Cung đường chạy của giải đấu với những con đường mang vẻ đẹp nên thơ, vừa chất chứa dấu ấn xưa cổ, hoà cùng vẻ đẹp phồn hoa, hiện đại chắc chắn sẽ gợi nên những rung cảm và tạo được những dấu ấn khó quên cho Runners.&nbsp;">
+<meta property="og:url" content="https://runningdiamondcup.com">
+<meta name="robots" content="noindex, nofollow" />
+<meta property="og:title" content="Running Diamond Cup 2024" />
+<meta property="og:type" content="website">
+<meta property="og:image" content="../assets/images/logo_RDC2024.png" />
+<meta property="og:description" content="Running Diamond Cup" />
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:title" content="RDC" />
+<meta property="twitter:image" content="../assets/images/logo_RDC2024.png" />
+<meta property="twitter:description" content="Running Diamond Cup" />
 
-  <head>
+<head>
     <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-          "gtm.start": new Date().getTime(),
-          event: "gtm.js",
-        });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-5KQDKM56");
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                "gtm.start": new Date().getTime(),
+                event: "gtm.js",
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != "dataLayer" ? "&l=" + l : "";
+            j.async = true;
+            j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, "script", "dataLayer", "GTM-5KQDKM56");
     </script>
-    <!-- Meta Pixel Code -->
     <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1099902777938350");
-      fbq("track", "PageView");
+        !(function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) :
+                    n.queue.push(arguments);
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = "2.0";
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s);
+        })(
+            window,
+            document,
+            "script",
+            "https://connect.facebook.net/en_US/fbevents.js"
+        );
+        fbq("init", "1099902777938350");
+        fbq("track", "PageView");
     </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1099902777938350&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
+    <noscript><img height="1" width="1" style="display: none"
+        src="https://www.facebook.com/tr?id=1099902777938350&ev=PageView&noscript=1" /></noscript>
     <link rel="icon" href="<%= BASE_URL %>logoRDC.png" />
     <link rel="preload" as="image" href="../assets/images/logo_RDC2024.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter"
-      rel="stylesheet"
-    />
-  </head>
-  <title>
-    RunningDiamondCup.vn – Chạy Gây Quỹ Từ Thiện Trên Cung Đường Kim Cương
-  </title>
-  <title><%= htmlWebpackPlugin.options.title %></title>
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
+</head>
+<title>
+    Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương
+</title>
+<title>
+    Running Diamond Cup
+</title>
+
+<body>
     <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+    <strong>Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
