--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 <meta name="title" content="Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương">
 <meta name="description" content="Running Diamond Cup 2024 sẽ có 02 cự ly, gồm 5km và 10km dành cho các vận động viên phong trào nam và nữ. Cung đường chạy của giải đấu với những con đường mang vẻ đẹp nên thơ, vừa chất chứa dấu ấn xưa cổ, hoà cùng vẻ đẹp phồn hoa, hiện đại chắc chắn sẽ gợi nên những rung cảm và tạo được những dấu ấn khó quên cho Runners.&nbsp;">
 <meta property="og:url" content="https://runningdiamondcup.com">
-<meta name="robots" content="noindex, nofollow" />
 <meta property="og:title" content="Running Diamond Cup 2024" />
 <meta property="og:type" content="website">
 <meta property="og:image" content="../assets/images/logo_RDC2024.png" />
@@ -62,21 +61,22 @@
         fbq("track", "PageView");
     </script>
     <noscript><img height="1" width="1" style="display: none"
-        src="https://www.facebook.com/tr?id=1099902777938350&ev=PageView&noscript=1" /></noscript>
+            src="https://www.facebook.com/tr?id=1099902777938350&ev=PageView&noscript=1" /></noscript>
     <link rel="icon" href="<%= BASE_URL %>logoRDC.png" />
     <link rel="preload" as="image" href="../assets/images/logo_RDC2024.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
 </head>
-<title>
-    Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương
-</title>
+<title>Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương (Website chính thức)</title>
+<h1 style="display: none;">Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương (Website chính thức)
+</h1>
 <title>
     Running Diamond Cup
 </title>
 
 <body>
     <noscript>
-    <strong>Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương</strong>
+        <strong>Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương</strong>
     </noscript>
     <div id="app"></div>
 </body>
