feat: update logo

--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,8 @@
     </script>
     <noscript><img height="1" width="1" style="display: none"
             src="https://www.facebook.com/tr?id=1099902777938350&ev=PageView&noscript=1" /></noscript>
-    <link rel="icon" href="<%= BASE_URL %>logoRDC.png" />
+    <link rel="icon" href="<%= BASE_URL %>rdc_logo.png" />
     <link rel="preload" as="image" href="../assets/images/logo_RDC2024.png" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
 </head>
 <title>Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương (Website chính thức)</title>
