feat: update meta

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8" />
-<meta http-equiv="origin-trial" content="Az520Inasey3TAyqLyojQa8MnmCALSEU29yQFW8dePZ7xQTvSt73pHazLFTK5f7SyLUJSo2uKLesEtEa9aUYcgMAAACPeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZS5jb206NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OSwiaXNTdWJkb21haW4iOnRydWUsImlzVGhpcmRQYXJ0eSI6dHJ1ZX0=">
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-<meta name="description" content="This is an example of a meta description. It will show up in search engine results as a summary of what the page is about." />
-<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-<meta name="title" content="Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương">
-<meta name="description" content="Running Diamond Cup 2024 sẽ có 02 cự ly, gồm 5km và 10km dành cho các vận động viên phong trào nam và nữ. Cung đường chạy của giải đấu với những con đường mang vẻ đẹp nên thơ, vừa chất chứa dấu ấn xưa cổ, hoà cùng vẻ đẹp phồn hoa, hiện đại chắc chắn sẽ gợi nên những rung cảm và tạo được những dấu ấn khó quên cho Runners.&nbsp;">
-<meta property="og:url" content="https://runningdiamondcup.com">
-<meta property="og:title" content="Running Diamond Cup 2024" />
-<meta property="og:type" content="website">
-<meta property="og:image" content="../assets/images/logo_RDC2024.png" />
-<meta property="og:description" content="Running Diamond Cup" />
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:title" content="RDC" />
-<meta property="twitter:image" content="../assets/images/logo_RDC2024.png" />
-<meta property="twitter:description" content="Running Diamond Cup" />
+<meta name="description" content="Running Diamond Cup 2024 sẽ có 02 cự ly, gồm 5km và 10km dành cho các vận động viên phong trào nam và nữ. Cung đường chạy của giải đấu với những con đường mang vẻ đẹp nên thơ, vừa chất chứa dấu ấn xưa cổ, hoà cùng vẻ đẹp phồn hoa, hiện đại chắc chắn sẽ gợi nên những rung cảm và tạo được những dấu ấn khó quên cho Runners.&nbsp"
+/>
 
 <head>
     <script>
@@ -60,6 +48,17 @@
         fbq("init", "1099902777938350");
         fbq("track", "PageView");
     </script>
+    <meta name="title" content="Running Diamond Cup 2024 - Bước Chạy Rực Rỡ Trên Cung Đường Kim Cương">
+    <meta name="description" content="Running Diamond Cup 2024 sẽ có 02 cự ly, gồm 5km và 10km dành cho các vận động viên phong trào nam và nữ. Cung đường chạy của giải đấu với những con đường mang vẻ đẹp nên thơ, vừa chất chứa dấu ấn xưa cổ, hoà cùng vẻ đẹp phồn hoa, hiện đại chắc chắn sẽ gợi nên những rung cảm và tạo được những dấu ấn khó quên cho Runners.&nbsp;">
+    <meta property="og:url" content="https://runningdiamondcup.com">
+    <meta property="og:title" content="Running Diamond Cup 2024" />
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="../assets/images/logo_RDC2024.png" />
+    <meta property="og:description" content="Running Diamond Cup" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="RDC" />
+    <meta property="twitter:image" content="../assets/images/logo_RDC2024.png" />
+    <meta property="twitter:description" content="Running Diamond Cup" />
     <noscript><img height="1" width="1" style="display: none"
             src="https://www.facebook.com/tr?id=1099902777938350&ev=PageView&noscript=1" /></noscript>
     <link rel="icon" href="<%= BASE_URL %>rdc_logo.png" />
